fixed traktplus overflow content width issue

--- a/static/less/module-traktplus.less
+++ b/static/less/module-traktplus.less
@@ -67,7 +67,7 @@
     ul {
       max-height: 225px;
       overflow-y: auto;
-      width: 97%;
+      width: 100%;
 
       li {
         background: url(/static/images/alpha/fff_10.png);
